--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,1 +1,59 @@
-<p>register works!</p>
+<div class="mb-3">
+  <h3>Introduza un enderezo electrónico e un contrasinal de 8 ou máis caracteres.</h3>
+  <form #registerForm="ngForm" (ngSubmit)="onSubmit()">
+    <div>
+      <label for="email" class="form-label">Email:</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        #email="ngModel"
+        [(ngModel)]="user.email"
+        required
+        email
+        class="form-control"
+      />
+      @if (email.errors?.['required'] && !email.pristine) {
+      <div class="alert alert-warning" role="alert">Email é obrigatorio.</div>
+      } @if (email.errors?.['email'] && !email.pristine) {
+      <div class="alert alert-warning" role="alert">
+        Debe ter formato de correo electrónico.
+      </div>
+      }
+    </div>
+
+    <div>
+      <label for="password" class="form-label">Contrasinal:</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        #password="ngModel"
+        [(ngModel)]="user.password"
+        required
+        minlength="8"
+        class="form-control"
+      />
+      @if (password.errors?.['required'] && !password.pristine) {
+      <div class="alert alert-warning" role="alert">
+        Contrasinal é obrigatorio.
+      </div>
+      } @if (password.errors?.['minlength'] && !password.pristine) {
+      <div class="alert alert-warning" role="alert">
+        Debe ter polo menos 8 caracteres.
+      </div>
+      }
+    </div>
+
+    <button
+      type="submit"
+      [disabled]="!registerForm.form.valid"
+      class="btn btn-primary"
+    >
+      {{ loading ? "Logging in..." : "Login" }}
+    </button>
+    @if (errorMessage) {
+    <div class="alert alert-danger" role="alert">{{ errorMessage }}</div>
+    }
+  </form>
+</div>
