--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,5 +1,7 @@
 <div class="mb-3">
-  <h3>Introduza un enderezo electrónico e un contrasinal de 8 ou máis caracteres.</h3>
+  <h3>
+    Introduza un enderezo electrónico e un contrasinal de 8 ou máis caracteres.
+  </h3>
   <form #registerForm="ngForm" (ngSubmit)="onSubmit()">
     <div>
       <label for="email" class="form-label">Email:</label>
@@ -13,11 +15,26 @@
         email
         class="form-control"
       />
+      <label for="email2" class="form-label">Repita o enderezo:</label>
+      <input
+        type="email"
+        id="email2"
+        name="email2"
+        #email2="ngModel"
+        [(ngModel)]="user2.email"
+        required
+        email
+        class="form-control"
+      />
       @if (email.errors?.['required'] && !email.pristine) {
       <div class="alert alert-warning" role="alert">Email é obrigatorio.</div>
       } @if (email.errors?.['email'] && !email.pristine) {
       <div class="alert alert-warning" role="alert">
         Debe ter formato de correo electrónico.
+      </div>
+      } @if ((user.email !== user2.email) && !email2.pristine) {
+      <div class="alert alert-warning" role="alert">
+        Os enderezos non coinciden.
       </div>
       }
     </div>
@@ -34,6 +51,17 @@
         minlength="8"
         class="form-control"
       />
+      <label for="password2" class="form-label">Repita o contrasinal:</label>
+      <input
+        type="password"
+        id="password2"
+        name="password2"
+        #password2="ngModel"
+        [(ngModel)]="user2.password"
+        required
+        minlength="8"
+        class="form-control"
+      />
       @if (password.errors?.['required'] && !password.pristine) {
       <div class="alert alert-warning" role="alert">
         Contrasinal é obrigatorio.
@@ -42,7 +70,12 @@
       <div class="alert alert-warning" role="alert">
         Debe ter polo menos 8 caracteres.
       </div>
-      }
+      } @if ((user.password !== user2.password) && !password2.pristine &&
+      !password2.pristine) {
+      <div class="alert alert-warning" role="alert">
+        Contrasinal non coincide.
+      </div>
+      }@else{}
     </div>
 
     <button
@@ -50,7 +83,7 @@
       [disabled]="!registerForm.form.valid"
       class="btn btn-primary"
     >
-      {{ loading ? "Logging in..." : "Login" }}
+      {{ loading ? "Enviando..." : "Rexistrar" }}
     </button>
     @if (errorMessage) {
     <div class="alert alert-danger" role="alert">{{ errorMessage }}</div>
