add dashboard component; draft

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,17 @@
-<p>dashboard works!</p>
+<melApp-dashcard
+  targetPath="./suppliers"
+  iconPath="./beehive2.png"
+  cardTitle="Proveedores"
+></melApp-dashcard>
+
+<melApp-dashcard
+  targetPath="./suppliers"
+  iconPath="./beehive2.png"
+  cardTitle="Clientes"
+></melApp-dashcard>
+
+<melApp-dashcard
+  targetPath="./suppliers"
+  iconPath="./beehive2.png"
+  cardTitle="Apiarios"
+></melApp-dashcard>
