add bootstrap styles to use grid

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,17 +1,48 @@
-<melApp-dashcard
-  targetPath="./suppliers"
-  iconPath="./beehive2.png"
-  cardTitle="Proveedores"
-></melApp-dashcard>
+<div class="container">
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4">
+    <!-- Proveedores -->
+    <div class="col">
+      <melApp-dashcard
+        targetPath="./suppliers"
+        iconPath="./beehive2.png"
+        cardTitle="Proveedores"
+      ></melApp-dashcard>
+    </div>
 
-<melApp-dashcard
-  targetPath="./suppliers"
-  iconPath="./beehive2.png"
-  cardTitle="Clientes"
-></melApp-dashcard>
+    <!-- Clientes -->
+    <div class="col">
+      <melApp-dashcard
+        targetPath="./clients"
+        iconPath="./beehive2.png"
+        cardTitle="Clientes"
+      ></melApp-dashcard>
+    </div>
 
-<melApp-dashcard
-  targetPath="./suppliers"
-  iconPath="./beehive2.png"
-  cardTitle="Apiarios"
-></melApp-dashcard>
+    <!-- Reinas -->
+    <div class="col">
+      <melApp-dashcard
+        targetPath="./queens"
+        iconPath="./beehive2.png"
+        cardTitle="Reinas"
+      ></melApp-dashcard>
+    </div>
+
+    <!-- Apiarios -->
+    <div class="col">
+      <melApp-dashcard
+        targetPath="./apiaries"
+        iconPath="./beehive2.png"
+        cardTitle="Apiarios"
+      ></melApp-dashcard>
+    </div>
+
+    <!-- Cosechas -->
+    <div class="col">
+      <melApp-dashcard
+        targetPath="./harvests"
+        iconPath="./beehive2.png"
+        cardTitle="Cosechas"
+      ></melApp-dashcard>
+    </div>
+  </div>
+</div>
