--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,29 @@
-<h1>app.component works</h1>
-<router-outlet />
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" routerLink="/dashboard" routerLinkActive="active" aria-current="page">Home</a>
+            <a class="nav-link" routerLink="/suppliers" routerLinkActive="active">Proveedores</a>
+            <a class="nav-link" routerLink="/clients" routerLinkActive="active">Clientes</a>
+            <a class="nav-link" routerLink="/apiaries" routerLinkActive="active">Apiarios</a>
+            <a class="nav-link" routerLink="/queens" routerLinkActive="active">Reinas</a>
+            <a class="nav-link" routerLink="/harvests" routerLinkActive="active">Cosechas</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <router-outlet></router-outlet>
