--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,1 @@
-<melApp-navbar></melApp-navbar>
-<router-outlet></router-outlet>
+@if (showNavbar) {<melApp-navbar></melApp-navbar>} <router-outlet></router-outlet>
