--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">MelApp | {{user}}</a>
+        <a class="navbar-brand">
+            @if (user) {
+                MelApp
+            }@else {MelApp | {{user}}}</a>
         <button
           class="navbar-toggler"
           type="button"
