--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -18,12 +18,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" routerLink="/dashboard" routerLinkActive="active" aria-current="page">Home</a>
+            <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Home</a>
             <a class="nav-link" routerLink="/suppliers" routerLinkActive="active">Proveedores</a>
             <a class="nav-link" routerLink="/clients" routerLinkActive="active">Clientes</a>
             <a class="nav-link" routerLink="/apiaries" routerLinkActive="active">Apiarios</a>
             <a class="nav-link" routerLink="/queens" routerLinkActive="active">Reinas</a>
             <a class="nav-link" routerLink="/harvests" routerLinkActive="active">Cosechas</a>
+            <a class="nav-link" routerLink="/logout" routerLinkActive="active">Cerrar sesión</a>
           </div>
         </div>
       </div>
