add close session funtionality, with button in navbar

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -24,7 +24,7 @@
             <a class="nav-link" routerLink="/apiaries" routerLinkActive="active">Apiarios</a>
             <a class="nav-link" routerLink="/queens" routerLinkActive="active">Reinas</a>
             <a class="nav-link" routerLink="/harvests" routerLinkActive="active">Cosechas</a>
-            <a class="nav-link" routerLink="/logout" routerLinkActive="active">Cerrar sesión</a>
+            <button class="button btn-warning" (click)="logOut()">Cerrar sesión</button>
           </div>
         </div>
       </div>
