--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -2,9 +2,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand">
-            @if (user) {
-                MelApp
-            }@else {MelApp | {{user}}}</a>
+            @if (!userToDisplay) {
+                MelApp | Sesión no iniciada
+            }@else {MelApp | {{userToDisplay}}}</a>
         <button
           class="navbar-toggler"
           type="button"
