--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,7 +1,11 @@
 <div class="mb-3">
   <h3>
-    Introduza un enderezo electrónico e un contrasinal de 8 ou máis caracteres.
+    Rexístre unha nova conta
   </h3>
+  <ul>
+    <li>Introduza un correo electrónico válido.</li>
+    <li>O contrasinal ebe ter un mínimo de 8 caracteres.</li>
+  </ul>
   <form #registerForm="ngForm" (ngSubmit)="onSubmit()">
     <div>
       <label for="email" class="form-label">Email:</label>
