add instructions to register form

--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,10 +1,8 @@
 <div class="mb-3">
-  <h3>
-    Rexístre unha nova conta
-  </h3>
+  <h3>Rexístre unha nova conta</h3>
   <ul>
     <li>Introduza un correo electrónico válido.</li>
-    <li>O contrasinal ebe ter un mínimo de 8 caracteres.</li>
+    <li>O contrasinal debe ter un mínimo de 8 caracteres.</li>
   </ul>
   <form #registerForm="ngForm" (ngSubmit)="onSubmit()">
     <div>
