--- a/frontend/src/app/clientcard/clientcard.component.html
+++ b/frontend/src/app/clientcard/clientcard.component.html
@@ -1,1 +1,47 @@
-<p>clientcard works!</p>
+<div class="card h-100">
+  <div class="card-body">
+    <h5 class="card-title">{{ client.clientName }}</h5>
+    <small class="text-body-secondary">id: {{ client.clientId }}</small>
+    <ol class="list-group list-group-numbered">
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Teléfono:</div>
+          {{ client.phone }}
+        </div>
+      </li>
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Correo-e:</div>
+          {{ client.email }}
+        </div>
+      </li>
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Dirección:</div>
+          {{ client.street }}, {{ client.addressNumber }},
+          {{ client.locality }}
+        </div>
+      </li>
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Mis notas:</div>
+          {{ client.notes }}
+        </div>
+      </li>
+    </ol>
+  </div>
+  <div class="card-footer">
+    <div class="d-grid gap-2">
+      <a href="#" class="btn btn-warning text-center">Editar</a>
+      <a href="#" class="btn btn-danger text-center">Borrar</a>
+    </div>
+  </div>
+</div>
