--- a/frontend/src/app/clientslist/clientslist.component.html
+++ b/frontend/src/app/clientslist/clientslist.component.html
@@ -1,1 +1,5 @@
-<p>clientslist works!</p>
+@for(client of clients; track client.clientId){
+    <melApp-clientcard [client]="client"></melApp-clientcard>
+}@empty {
+    <p>Non hai clientes que amosar.</p>
+}
