--- a/frontend/src/app/queencard/queencard.component.html
+++ b/frontend/src/app/queencard/queencard.component.html
@@ -1,1 +1,47 @@
-<p>queencard works!</p>
+<div class="card h-100">
+    <div class="card-body">
+      <h5 class="card-title">{{ queen.queenName }}</h5>
+      <small class="text-body-secondary">id: {{ queen.queenId }}</small>
+      <ol class="list-group list-group-numbered">
+        <li
+          class="list-group-item d-flex justify-content-between align-items-start"
+        >
+          <div class="ms-2 me-auto">
+            <div class="fw-bold">Nacemento:</div>
+            {{ queen.yearOfBirth }}
+          </div>
+        </li>
+        <li
+          class="list-group-item d-flex justify-content-between align-items-start"
+        >
+          <div class="ms-2 me-auto">
+            <div class="fw-bold">Morte::</div>
+            {{ queen.yearOfDeath }}
+          </div>
+        </li>
+        <li
+          class="list-group-item d-flex justify-content-between align-items-start"
+        >
+          <div class="ms-2 me-auto">
+            <div class="fw-bold">Orixe:</div>
+            {{ queen.origin }}
+          </div>
+        </li>
+        <li
+          class="list-group-item d-flex justify-content-between align-items-start"
+        >
+          <div class="ms-2 me-auto">
+            <div class="fw-bold">Nai:</div>
+            {{ queen.mother }}
+          </div>
+        </li>
+      </ol>
+    </div>
+    <div class="card-footer">
+      <div class="d-grid gap-2">
+        <a href="#" class="btn btn-warning text-center">Editar</a>
+        <a href="#" class="btn btn-danger text-center">Borrar</a>
+      </div>
+    </div>
+  </div>
+  
