--- a/frontend/src/app/queencard/queencard.component.html
+++ b/frontend/src/app/queencard/queencard.component.html
@@ -15,7 +15,7 @@
           class="list-group-item d-flex justify-content-between align-items-start"
         >
           <div class="ms-2 me-auto">
-            <div class="fw-bold">Morte::</div>
+            <div class="fw-bold">Morte:</div>
             {{ queen.yearOfDeath }}
           </div>
         </li>
