--- a/frontend/src/app/queenslist/queenslist.component.html
+++ b/frontend/src/app/queenslist/queenslist.component.html
@@ -1,1 +1,5 @@
-<p>queenslist works!</p>
+@for(queen of queens; track queen.queenId){
+    <melApp-queencard [queen]="queen"></melApp-queencard>
+}@empty {
+    <p>Non hai raíñas que amosar.</p>
+}
