--- a/frontend/src/app/apiarieslist/apiarieslist.component.html
+++ b/frontend/src/app/apiarieslist/apiarieslist.component.html
@@ -1,1 +1,5 @@
-<p>apiarieslist works!</p>
+@for(apiary of apiaries; track apiary.apiaryId){
+    <melApp-apiarycard [apiary]="apiary"></melApp-apiarycard>
+}@empty {
+    <p>Non hai apiarios que amosar.</p>
+}
