--- a/frontend/src/app/apiarycard/apiarycard.component.html
+++ b/frontend/src/app/apiarycard/apiarycard.component.html
@@ -1,1 +1,78 @@
-<p>apiarycard works!</p>
+<div class="card h-100">
+  <div class="card-body">
+    <h5 class="card-title">{{ apiary.apiaryName }}</h5>
+    <small class="text-body-secondary">id: {{ apiary.apiaryId }}</small>
+    <ol class="list-group list-group-numbered">
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Localidade:</div>
+          {{ apiary.locality }}
+        </div>
+      </li>
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Coordenadas:</div>
+          {{ apiary.latitude }};{{ apiary.longitude }}
+        </div>
+      </li>
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Vexetación dominante:</div>
+          {{ apiary.vegetation }}
+        </div>
+      </li>
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Distancia á auga (hm):</div>
+          {{ apiary.hmToWater }}
+        </div>
+      </li>
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Data de inicio:</div>
+          {{ apiary.startDate }}
+        </div>
+      </li>
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Data de baixa:</div>
+          {{ apiary.endDate }}
+        </div>
+      </li>
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Terreo en propiedade:</div>
+          @if (apiary.userIsOwner == "true") {Sí}@else {Non}
+        </div>
+      </li>
+      <li
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">Transhumante:</div>
+          @if (apiary.nomad == "true") {Sí}@else {Non}
+        </div>
+      </li>
+    </ol>
+  </div>
+  <div class="card-footer">
+    <div class="d-grid gap-2">
+      <a href="#" class="btn btn-warning text-center">Editar</a>
+      <a href="#" class="btn btn-danger text-center">Borrar</a>
+    </div>
+  </div>
+</div>
